--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <script>
         /**
         * SCF_GATEWAY：SCF 云函数网关地址
-        * SITE_NAME：站点名称
+        * SITE_NAME：我的ondriver网盘
         */
         window.GLOBAL_CONFIG = {
-            SCF_GATEWAY: "",
+            SCF_GATEWAY: "https://square-glitter-ac55.ldzx.workers.dev/",
             SITE_NAME: "FODI",
             IS_CF: true
         };
